# wb-price-changer

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.sqlx/: query-04447207da23e7bd4a2706664e2fe097af050e8407c530f2b6e00d2b39a5374d.json  query-384d3afc83cfe28be0b32104cd75faee1ae97c6579db5252457e297698c3f2a5.json  query-a711d31e686d2e7389016648cabb47ffe0941ac393e25afcb7bfbeaa18d4d775.json  query-a80d945d5a1bc79662d207a7ba69fbd2d1112bfd94ec89c021b322702337fa91.json  query-b7385fbed1a2d3529706d0170aa7c6dbfe66a966da92d6c8a39d96194e728749.json  query-bffae307a94089298990f289efe62ec1a60cf84aacd19d8d160933d226f6de77.json  query-eb11a3a994a8a2acc79c9e12cd606c31055a2bcf56ee28d20db0354507832e5c.json  query-ece9d702e725dc490ec489a3e60b20df76b755532d56a4f156e946e753ce2dc0.json  query-efa9d289437e06f3677b8c5f3dffc8077104cf47e3b6520880946752e2cc950f.json
migrations/: 20241011050958_creat_tables.down.sql  20241011050958_creat_tables.up.sql
src/: calc.rs  main.rs  state.rs  utils.rs  wb.rs
src/api/: error.rs  middlewares.rs  mod.rs  ping.rs  router.rs
src/db/: mod.rs  product.rs  supplier.rs
src/update/: mod.rs
