[package]
name = "wb-price-changer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
log = "0.4.22"
tempfile = "3.13.0"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.64"
futures = "0.3.31"
